// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit: Component should render correctly 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="folder.edit.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Folders"
        id="folder.edit.title"
        values={Object {}}
      />
    }
    primaryMenuItems={Array []}
    secondaryMenuItems={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="folder.edit.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Folders"
        id="folder.edit.title"
        values={Object {}}
      />
    }
  />
  <styled.form
    onSubmit={[Function]}
  >
    <LoadingWrapper
      error={null}
      loading={false}
      noData={false}
      noDataContent={null}
    >
      <TextInput
        checkOnlyErrors={false}
        errors={Object {}}
        fetchFolder={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "folderId": "1",
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Promise {},
              },
            ],
          }
        }
        folder={
          Object {
            "name": "name",
            "project": Object {
              "id": "1",
            },
          }
        }
        fullWidth={true}
        handleBlur={[Function]}
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "goBack": [Function],
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isEdit={true}
        isSubmitting={false}
        isValid={true}
        label="Folder Name"
        match={
          Object {
            "params": Object {
              "folderId": "1",
            },
          }
        }
        name="name"
        onChange={[Function]}
        placeholder="Name"
        removeFolder={[Function]}
        touched={Object {}}
        value="name"
        values={
          Object {
            "name": "name",
          }
        }
      />
    </LoadingWrapper>
    <Styled(Span)
      id="removeFolderDesktopBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Remove Folder"
        id="folder.edit.removeFolder"
        values={Object {}}
      />
    </Styled(Span)>
    <NavigationContainer
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackButton
        disabled={false}
        id="backBtn"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Back"
          id="folder.edit.cancel"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="editFolderBtn"
        loading={false}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="folder.edit.createFolder"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Removing a folder will also remove any page under it. Are you sure you want to proceed?"
        id="folder.edit.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="folder.edit.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="folder.edit.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;

exports[`Edit: Component should render correctly with loader 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="folder.edit.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Folders"
        id="folder.edit.title"
        values={Object {}}
      />
    }
    primaryMenuItems={Array []}
    secondaryMenuItems={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="folder.edit.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Folders"
        id="folder.edit.title"
        values={Object {}}
      />
    }
  />
  <styled.form
    onSubmit={[Function]}
  >
    <LoadingWrapper
      error={null}
      loading={true}
      noData={false}
      noDataContent={null}
    >
      <TextInput
        checkOnlyErrors={false}
        errors={Object {}}
        fetchFolder={[Function]}
        folder={
          Object {
            "name": "name",
            "project": Object {
              "id": "1",
            },
          }
        }
        fullWidth={true}
        handleBlur={[Function]}
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "goBack": [Function],
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isEdit={true}
        isSubmitting={false}
        isValid={true}
        label="Folder Name"
        match={
          Object {
            "params": Object {
              "folderId": "1",
            },
          }
        }
        name="name"
        onChange={[Function]}
        placeholder="Name"
        removeFolder={[Function]}
        touched={Object {}}
        value="name"
        values={
          Object {
            "name": "name",
          }
        }
      />
    </LoadingWrapper>
    <Styled(Span)
      id="removeFolderDesktopBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Remove Folder"
        id="folder.edit.removeFolder"
        values={Object {}}
      />
    </Styled(Span)>
    <NavigationContainer
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackButton
        disabled={false}
        id="backBtn"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Back"
          id="folder.edit.cancel"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="editFolderBtn"
        loading={false}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="folder.edit.createFolder"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Removing a folder will also remove any page under it. Are you sure you want to proceed?"
        id="folder.edit.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="folder.edit.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="folder.edit.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;
